--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-defaults": "^9.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
