--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-defaults": "^9.0.0"
   },
   "dependencies": {
+    "async-iterator-to-stream": "^1.2.0",
     "express": "^4.17.1",
     "ipfs-http-client": "^51.0.1",
     "sharp": "^0.28.3"
