--- a/server/package.json
+++ b/server/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
+    "debug": "^4.3.2",
     "express": "^4.17.1",
     "ipfs-http-client": "^51.0.1",
+    "node-abort-controller": "^3.0.0",
     "sharp": "^0.28.3"
   }
 }
