--- a/server/package.json
+++ b/server/package.json
@@ -33,9 +33,11 @@
     "async-iterator-to-stream": "^1.2.0",
     "debug": "^4.3.2",
     "express": "^4.17.1",
+    "ffmpeg-static": "^4.4.0",
     "ipfs-http-client": "^51.0.1",
     "micromatch": "^4.0.4",
     "node-abort-controller": "^3.0.0",
+    "prism-media": "^1.3.2",
     "sharp": "^0.28.3",
     "stream-mmmagic": "^2.3.0"
   }
