--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "async-iterator-to-stream": "^1.2.0",
     "debug": "^4.3.2",
     "express": "^4.17.1",
+    "ffmpeg-static": "^4.4.0",
     "ipfs-http-client": "^51.0.1",
     "micromatch": "^4.0.4",
     "node-abort-controller": "^3.0.0",
