--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,5 @@
+# https://editorconfig.org
+
 root = true
 
 [*]
@@ -7,3 +9,15 @@ indent_size = 2
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
+
+[*.{js,jsx,ts,tsx,vue}]
+indent_style = space
+indent_size = 2
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 100
