--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,12 +28,14 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.1",
+    "@types/jest": "^28.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/sharp": "^0.30.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-defaults": "^9.0.0"
+    "eslint-config-defaults": "^9.0.0",
+    "jest": "^28.1.3"
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
