--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "jest": "^28.1.3",
     "jest-openapi": "^0.14.2",
     "prettier": "2.7.1",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8"
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
