--- a/package.json
+++ b/package.json
@@ -32,16 +32,11 @@
     "@types/jest": "^28.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/sharp": "^0.30.5",
-    "@types/supertest": "^2.0.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-defaults": "^9.0.0",
-    "jest": "^28.1.3",
-    "jest-openapi": "^0.14.2",
-    "prettier": "2.7.1",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8"
+    "prettier": "2.7.1"
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
