--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
+    "test": "mocha --loader=testdouble",
+    "test:watch": "mocha --watch"
   },
   "repository": {
     "type": "git",
@@ -26,17 +26,25 @@
   },
   "homepage": "https://github.com/ipfs-search/nyats#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.1",
     "@types/jest": "^28.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/sharp": "^0.30.5",
+    "@types/supertest": "^2.0.12",
+    "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
+    "chai": "^4.3.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-defaults": "^9.0.0",
-    "prettier": "2.7.1"
+    "mocha": "^10.0.0",
+    "prettier": "2.7.1",
+    "supertest": "^6.2.4",
+    "testdouble": "^3.16.6",
+    "testdouble-chai": "^0.5.0"
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
