--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha --loader=testdouble",
+    "test": "mocha --loader=esmock",
     "test:watch": "mocha --watch"
   },
   "repository": {
@@ -33,6 +33,8 @@
     "@types/jest": "^28.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/sharp": "^0.30.5",
+    "@types/sinon": "^10.0.13",
+    "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.12",
     "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
@@ -40,11 +42,13 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-defaults": "^9.0.0",
+    "esmock": "^1.9.6",
     "mocha": "^10.0.0",
+    "mocha-suppress-logs": "^0.3.1",
     "prettier": "2.7.1",
-    "supertest": "^6.2.4",
-    "testdouble": "^3.16.6",
-    "testdouble-chai": "^0.5.0"
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "async-iterator-to-stream": "^1.2.0",
