--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.8",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
     "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
     "c8": "^7.12.0",
@@ -44,6 +45,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-defaults": "^9.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "esmock": "^1.9.6",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
