--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-defaults": "^9.0.0",
     "eslint-config-prettier": "^8.5.0",
     "esmock": "^1.9.6",
+    "express-healthcheck": "^0.1.0",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
     "prettier": "2.7.1",
