Add restarting server.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
+    "start:watch": "nodemon server/server.js",
     "test": "mocha",
     "test:watch": "nodemon --exec mocha",
     "test:cover": "c8 --src server -x server/test --all mocha"
