--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "micromatch": "^4.0.5",
     "node-abort-controller": "^3.0.1",
     "sharp": "^0.30.7",
-    "stream-mmmagic": "^2.3.0"
+    "stream-mmmagic": "^2.3.0",
+    "url-join": "^5.0.0"
   }
 }
