--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "eslint-config-defaults": "^9.0.0",
     "eslint-config-prettier": "^8.5.0",
     "esmock": "^1.9.6",
-    "express-healthcheck": "^0.1.0",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
     "prettier": "2.7.1",
@@ -65,6 +64,7 @@
     "node-abort-controller": "^3.0.1",
     "sharp": "^0.30.7",
     "stream-mmmagic": "^2.3.0",
-    "url-join": "^5.0.0"
+    "url-join": "^5.0.0",
+    "express-healthcheck": "^0.1.0"
   }
 }
