lerna-based multi-package/monorepo structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist/
-tmp/
+packages/*/lib
 
 # dependencies
-bower_components/
 node_modules/
-.package-lock.json
 
 # misc
 .env*
@@ -16,7 +13,8 @@ node_modules/
 connect.lock
 coverage/
 libpeerconnection.log
-npm-debug.log*
+npm-debug.log
+lerna-debug.log
 testem.log
 yarn-error.log
 
