--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "nyats-server",
+  "name": "nyats",
   "version": "0.1.0",
   "description": "Not Yet Another Thumbnail Service",
-  "main": "server/server.js",
-  "scripts": {
-    "start": "node server/cluster.js",
-    "start:watch": "nodemon server/cluster.js",
-    "test": "mocha",
-    "test:watch": "nodemon --exec mocha",
-    "test:cover": "c8 --src server -x server/test --all mocha"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ipfs-search/nyats.git"
@@ -20,51 +12,19 @@
     "sharp",
     "vips"
   ],
-  "type": "module",
+  "scripts": {
+    "bootstrap": "lerna bootstrap"
+  },
   "author": "Mathijs de Bruin",
   "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/ipfs-search/nyats/issues"
   },
   "homepage": "https://github.com/ipfs-search/nyats#readme",
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/chai": "^4.3.3",
-    "@types/debug": "^4.1.7",
-    "@types/express": "^4.17.13",
-    "@types/ffmpeg-static": "^3.0.1",
-    "@types/jest": "^28.1.7",
-    "@types/micromatch": "^4.0.2",
-    "@types/sharp": "^0.30.5",
-    "@types/sinon": "^10.0.13",
-    "@types/sinon-chai": "^3.2.8",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "api-contract-validator": "^2.2.8",
-    "babel-eslint": "^10.1.0",
-    "c8": "^7.12.0",
-    "chai": "^4.3.6",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-defaults": "^9.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "esmock": "^1.9.6",
-    "mocha": "^10.0.0",
-    "mocha-suppress-logs": "^0.3.1",
-    "prettier": "2.7.1",
-    "sinon": "^14.0.0",
-    "supertest": "^6.2.4"
-  },
-  "dependencies": {
-    "async-iterator-to-stream": "^1.2.0",
-    "debug": "^4.3.4",
-    "express": "^4.18.1",
-    "ffmpeg-static": "^4.4.1",
-    "ipfs-http-client": "^51.0.1",
-    "micromatch": "^4.0.5",
-    "node-abort-controller": "^3.0.1",
-    "sharp": "^0.30.7",
-    "stream-mmmagic": "^2.3.0",
-    "url-join": "^5.0.0",
-    "express-healthcheck": "^0.1.0"
+    "lerna": "^5.5.0"
   }
 }
