--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "keywords": [
     "ipfs",
     "thumbnails",
-    "sharp",
-    "vips"
+    "sharp"
   ],
   "author": "Mathijs de Bruin",
   "license": "AGPL-3.0-or-later",
@@ -22,6 +21,21 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^5.5.0"
+    "@types/chai-string": "^1.4.2",
+    "@types/mocha": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "c8": "^7.12.0",
+    "chai": "^4.3.6",
+    "chai-string": "^1.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "lerna": "^5.5.0",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   }
 }
