--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "prettier": "2.7.1"
   }
 }
