Mocha test runnner fixup.

--- a/packages/client/.mocharc.yml
+++ b/packages/client/.mocharc.yml
@@ -2,4 +2,7 @@ spec:
   - "test/**/*.spec.ts"
 extension:
   - "ts"
-loader: "ts-node/esm"
+# https://github.com/mochajs/mocha-examples/issues/47
+node-option:
+  - "experimental-specifier-resolution=node"
+  - "loader=ts-node/esm"
