--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "outDir": "./lib",
+    "outDir": "lib",
     "target": "esnext",
     "module": "esnext",
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "strict": true,
@@ -10,6 +11,5 @@
     "esModuleInterop": true,
     "declaration": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"]
 }
