--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,7 +22,10 @@
     "url": "git+https://github.com/ipfs-search/nyats.git"
   },
   "scripts": {
+    "prepublish": "npm run lint && npm run test && npm run clean && npm run build",
+    "clean": "rm -rf lib/*",
     "build": "tsc",
+    "watch": "tsc -w",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint",
     "lint": "npm run lint:ts && npm run lint:eslint",
