--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "prepublish": "npm run lint && npm run test && npm run clean && npm run build",
     "clean": "rm -rf lib/*",
     "build": "tsc",
+    "watch": "tsc -w",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint",
     "lint": "npm run lint:ts && npm run lint:eslint",
