--- a/packages/vuetify-img/package.json
+++ b/packages/vuetify-img/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "is-ipfs": "^6.0.2",
     "nyats-client": "*",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
