--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-defaults": "^9.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mocha": "^10.1.0",
     "lerna": "^5.5.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2",
-    "prettier": "2.7.1"
+    "typescript": "^4.8.2"
   }
 }
