--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,7 +35,6 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.1",
-    "@types/jest": "^28.1.7",
     "@types/micromatch": "^4.0.2",
     "@types/sharp": "^0.30.5",
     "@types/sinon": "^10.0.13",
@@ -45,12 +44,13 @@
     "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
     "c8": "^7.12.0",
-    "esmock": "^1.9.6",
+    "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4"
   },
   "dependencies": {
+    "@types/mocha": "^9.1.1",
     "async-iterator-to-stream": "^1.2.0",
     "debug": "^4.3.4",
     "express": "^4.18.1",
