--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,8 @@
     "start:watch": "nodemon lib/cluster.js",
     "test": "mocha",
     "test:watch": "nodemon --exec mocha",
-    "test:cover": "c8 --src lib --all mocha"
+    "test:cover": "c8 --src lib --all mocha",
+    "lint": "eslint lib test"
   },
   "bugs": {
     "url": "https://github.com/ipfs-search/nyats/issues"
@@ -46,6 +47,7 @@
     "c8": "^7.12.0",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
+    "serve-handler": "^6.1.3",
     "sinon": "^14.0.0",
     "supertest": "^6.2.4"
   },
@@ -55,7 +57,7 @@
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "express-healthcheck": "^0.1.0",
-    "ffmpeg-static": "^4.4.1",
+    "ffmpeg-static": "^5.1.0",
     "ipfs-http-client": "^51.0.1",
     "micromatch": "^4.0.5",
     "node-abort-controller": "^3.0.1",
