--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,19 +14,25 @@
   "author": "Mathijs de Bruin <mathijs@mathijsfietst.nl>",
   "homepage": "https://github.com/ipfs-search/nyats/tree/main/packages/server#readme",
   "license": "AGPL-3.0-or-later",
-  "main": "lib/cluster.js",
+  "main": "src/cluster.js",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ipfs-search/nyats.git"
   },
   "scripts": {
-    "start": "node lib/cluster.js",
-    "start:watch": "nodemon lib/cluster.js",
+    "start": "ts-node src/cluster.js",
+    "start:watch": "nodemon src/cluster.js",
+    "clean": "rimraf lib/* coverage/*",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run test",
+    "build": "tsc",
+    "lint:ts": "tsc --noEmit",
+    "lint:eslint": "eslint src test",
+    "lint": "npm run lint:ts && npm run lint:eslint",
     "test": "mocha",
     "test:watch": "nodemon --exec mocha",
-    "test:cover": "c8 --src lib --all mocha",
-    "lint": "eslint lib test"
+    "test:cover": "c8 --src src --all mocha"
   },
   "bugs": {
     "url": "https://github.com/ipfs-search/nyats/issues"
@@ -37,6 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.1",
     "@types/micromatch": "^4.0.2",
+    "@types/node": "^16.11.59",
     "@types/sharp": "^0.30.5",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.8",
