--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,13 +1,13 @@
 {
-	"extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.json",
 
-	"compilerOptions": {
-		"outDir": "lib",
-		"removeComments": false,
-		"declaration": true,
-		"allowJs": true,
-		"checkJs": true,
-		"strict": false
-	},
-	"include": ["src/**/*"]
+  "compilerOptions": {
+    "outDir": "./lib",
+    "removeComments": false,
+    "declaration": true,
+    "allowJs": true,
+    "checkJs": true,
+    "strict": false
+  },
+  "include": ["./src/**/*"]
 }
