--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -63,8 +63,10 @@
     "debug": "^4.3.4",
     "express": "^4.18.1",
     "express-healthcheck": "^0.1.0",
+    "express-validator": "^6.14.2",
     "ffmpeg-static": "^5.1.0",
     "ipfs-http-client": "^51.0.1",
+    "is-ipfs": "^6.0.2",
     "micromatch": "^4.0.5",
     "node-abort-controller": "^3.0.1",
     "sharp": "^0.31.0",
