--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -51,6 +51,7 @@
     "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
     "c8": "^7.12.0",
+    "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
     "serve-handler": "^6.1.3",
