--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.1",
@@ -51,6 +52,7 @@
     "api-contract-validator": "^2.2.8",
     "babel-eslint": "^10.1.0",
     "c8": "^7.12.0",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
     "mocha-suppress-logs": "^0.3.1",
