Move dev dependencies to packages.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,21 @@
     "url": "https://github.com/ipfs-search/nyats/issues"
   },
   "devDependencies": {
+    "@types/chai-string": "^1.4.2",
+    "@types/mocha": "^9.1.1",
+    "@typescript-eslint/parser": "^5.36.2",
+    "chai": "^4.3.6",
+    "chai-string": "^1.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mocha": "^10.1.0",
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
     "@types/debug": "^4.1.7",
