--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "clean": "rimraf lib/* coverage/*",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run clean && npm run lint && npm run test",
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "npm run lint && npm run test",
     "build": "tsc",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint src test",
