--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,8 +24,8 @@
     "start": "ts-node src/cluster.js",
     "start:watch": "nodemon src/cluster.js",
     "clean": "rimraf lib/* coverage/*",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run clean && npm run lint && npm run test",
+    "prepare": "npm run clean && npm run build",
+    "prepublishOnly": "npm run lint && npm run test",
     "build": "tsc",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint src test",
